--- a/src/index.scss
+++ b/src/index.scss
@@ -2,3 +2,8 @@
 @use './scss/base/base';
 @use './scss/abstracts/mixin';
 @use './scss/abstracts/variables';
+@use './App.scss';
+@use './componentes/nabvar/Navbar.scss';
+@use './componentes/imagenCarrito/ImgCarrito.scss';
+@use './componentes/botonCarrito/BotonCarrito.scss';
+@use './componentes/HeroSection/Hero.scss';
