--- a/src/index.scss
+++ b/src/index.scss
@@ -7,3 +7,4 @@
 @use './componentes/imagenCarrito/ImgCarrito.scss';
 @use './componentes/botonCarrito/BotonCarrito.scss';
 @use './componentes/HeroSection/Hero.scss';
+@use './componentes/cardGenerator/cardGenerator.scss';
