--- a/src/componentes/cardGenerator/cardGenerator.scss
+++ b/src/componentes/cardGenerator/cardGenerator.scss
@@ -1,9 +1,8 @@
 .stockCard{
-    padding: 5px;
     margin: 5px;
-    align-items: center;
+    height: 100%;
 }
 
 .stockImg{
-    height: 65vh;
+    width: 100%;
 }
