--- a/src/index.scss
+++ b/src/index.scss
@@ -7,4 +7,5 @@
 @use './componentes/imagenCarrito/ImgCarrito.scss';
 @use './componentes/botonCarrito/BotonCarrito.scss';
 @use './componentes/HeroSection/Hero.scss';
-@use './componentes/cardGenerator/cardGenerator.scss';
+@use './componentes/Item/Item.scss';
+@use './componentes/TituloDeSeccion/TituloSeccion.scss'
