--- a/src/componentes/nabvar/Navbar.scss
+++ b/src/componentes/nabvar/Navbar.scss
@@ -3,13 +3,15 @@
 
 .navbar{
             
-            background-color: $rojo !important;
+            background-color: $rojo;
             font-family: $fontnormal;
             height: 10vh;
+            font-size: 1.2rem;
         
 
         &__item{
             font-weight: bolder;
+            
 
             &:hover{
                 -webkit-animation: shake-bottom 0.8s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
@@ -83,5 +85,9 @@
                 }
               }
               
+        }
+
+        &__link{
+                text-decoration: none;
         }
 }
