--- a/src/index.scss
+++ b/src/index.scss
@@ -8,4 +8,5 @@
 @use './componentes/botonCarrito/BotonCarrito.scss';
 @use './componentes/HeroSection/Hero.scss';
 @use './componentes/Item/Item.scss';
-@use './componentes/TituloDeSeccion/TituloSeccion.scss'
+@use './componentes/TituloDeSeccion/TituloSeccion.scss';
+@use './componentes/ItemDetail/ItemDetail';
