--- a/src/index.scss
+++ b/src/index.scss
@@ -10,3 +10,4 @@
 @use './componentes/Item/Item.scss';
 @use './componentes/TituloDeSeccion/TituloSeccion.scss';
 @use './componentes/ItemDetail/ItemDetail';
+@use './componentes/404/NotFound.scss';
