--- a/src/componentes/nabvar/Navbar.scss
+++ b/src/componentes/nabvar/Navbar.scss
@@ -3,14 +3,17 @@
 
 .navbar{
             
-            background-color: $rojo;
+        background-color: #FF3CAC;
+        background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
+        
             font-family: $fontnormal;
             height: 10vh;
             font-size: 1.2rem;
         
 
         &__item{
-            font-weight: bolder;
+            font-weight:normal;
+            width: 10%;
             
 
             &:hover{
@@ -88,6 +91,10 @@
         }
 
         &__link{
+                color: white;
                 text-decoration: none;
+                background-color: rgba(255,255,255,0.2);
+                border-radius: 5px 5px 5px 5px;
+                padding: 8px;
         }
 }
