--- a/src/componentes/nabvar/Navbar.scss
+++ b/src/componentes/nabvar/Navbar.scss
@@ -7,13 +7,13 @@
         background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
         
             font-family: $fontnormal;
-            height: 10vh;
+            height: 25vh;
             font-size: 1.2rem;
         
 
         &__item{
             font-weight:normal;
-            width: 10%;
+            margin: 0px;
             
 
             &:hover{
@@ -96,5 +96,11 @@
                 background-color: rgba(255,255,255,0.2);
                 border-radius: 5px 5px 5px 5px;
                 padding: 8px;
+        }
+
+        &__logo{
+                width: 20vh;
+                margin-right: 60px;
+                margin-left: 0px;
         }
 }
