--- a/src/componentes/nabvar/Navbar.scss
+++ b/src/componentes/nabvar/Navbar.scss
@@ -13,7 +13,8 @@
 
         &__item{
             font-weight:normal;
-            margin: 0px;
+            width: 16%;
+            
             
 
             &:hover{
@@ -100,7 +101,11 @@
 
         &__logo{
                 width: 20vh;
-                margin-right: 60px;
-                margin-left: 0px;
+        }
+        
+        &__2{
+                display: flex;
+                flex-direction: row;
+                align-items: center;
         }
 }
