--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,4 @@
 @use './componentes/TituloDeSeccion/TituloSeccion.scss';
 @use './componentes/ItemDetail/ItemDetail';
 @use './componentes/404/NotFound.scss';
+@use './componentes/Carrito/Carrito.scss';
