--- a/src/componentes/Carrito/Carrito.scss
+++ b/src/componentes/Carrito/Carrito.scss
@@ -1,7 +1,20 @@
-@import '../../scss/abstracts/variables';
+@import '../../scss/abstracts/_variables.scss';
 
 .carrito{
 
+    &__titulo{
+        font-size: 2.4rem;
+        font-weight: bolder;
+    }
+
+    &__totales{
+        font-size: 1.5rem;
+        font-weight: bolder;
+    }
+
+    &__detalles{
+        font-size: 1.3rem;
+    }
 
     &__img{
         width: 10vh;
@@ -9,5 +22,17 @@
 
     &__ic{
         width: 5vh;
+
+        &:hover{
+            cursor: pointer;
+        }
+    }
+    &__row{
+        margin: 20px;
+        font-family: $fontnormal;
+    }
+
+    &__botones{
+        margin: 20px;
     }
 }
