--- a/src/componentes/ItemDetail/_ItemDetail.scss
+++ b/src/componentes/ItemDetail/_ItemDetail.scss
@@ -1,23 +1,21 @@
-@import '../../scss/abstracts/variables';
+@import "../../scss/abstracts/variables";
 
-.detail{
+.detail {
+  &__img {
+    width: 60vh;
+    margin: 15px;
+    border-radius: 40px 40px 40px 40px;
+  }
 
-    &__img{
-        width: 60vh;
-        margin: 15px;
-        border-radius: 40px 40px 40px 40px;
-    }
+  &__titulo {
+    font-family: $fontnormal;
+    font-size: 3rem;
+    margin: 20px;
+  }
 
-    &__titulo{
-        font-family: $fontnormal;
-        font-size: 3rem;
-        margin: 20px;
-    }
-
-    &__subtitulo{
-        font-family: $fontnormal;
-        font-size: 2rem;
-        margin: 12px;
-    }
-
+  &__subtitulo {
+    font-family: $fontnormal;
+    font-size: 2rem;
+    margin: 12px;
+  }
 }
