--- a/src/componentes/TituloDeSeccion/TituloSeccion.scss
+++ b/src/componentes/TituloDeSeccion/TituloSeccion.scss
@@ -1,8 +1,8 @@
-@import '../../scss/abstracts/variables';
+@import "../../scss/abstracts/variables";
 
-.titulo{
-    font-family: $fontnormal;
-    font-weight: bold;
-    margin: 10px;
-    font-size: 2rem;
+.titulo {
+  font-family: $fontnormal;
+  font-weight: bold;
+  margin: 10px;
+  font-size: 2rem;
 }
