--- a/src/componentes/nabvar/Navbar.scss
+++ b/src/componentes/nabvar/Navbar.scss
@@ -1,4 +1,5 @@
 @import "../../scss/abstracts/variables";
+@import "../../scss/abstracts/responsive";
 
 .navbar {
   background-color: #ff3cac;
@@ -6,11 +7,10 @@
     225deg,
     #ff3cac 0%,
     #784ba0 50%,
-    #2b86c5 100%
+    #2b86c5 100% 
   );
 
   font-family: $fontnormal;
-  height: 25vh;
   font-size: 1.2rem;
 
   &__item {
@@ -91,16 +91,36 @@
     }
   }
 
+
   &__link {
     color: white;
     text-decoration: none;
     background-color: rgba(255, 255, 255, 0.2);
     border-radius: 5px 5px 5px 5px;
     padding: 8px;
+
+    @include movil{
+      background-color: transparent;
+      font-size: 0.5rem;
+  }
+
+  @include tablet{
+    background-color: transparent;
+    font-size: 0.8rem;
+}
+
   }
 
   &__logo {
     width: 20vh;
+
+    @include movil{
+      width: 10vh;
+    }
+  
+    @include tablet{
+      width: 10vh;
+    }
   }
 
   &__2 {
@@ -108,4 +128,6 @@
     flex-direction: row;
     align-items: center;
   }
+
+
 }
