--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 @use './scss/base/resets';
 @use './scss/base/base';
-@use './scss/abstracts/mixin';
+@use './scss/abstracts/responsive';
 @use './scss/abstracts/variables';
 @use './componentes/nabvar/Navbar.scss';
 @use './componentes/imagenCarrito/ImgCarrito.scss';
